# codegopher

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/arch/: CONTEXT.md  MEMORY.md  PROVIDERS_MCP.md  README.md  SESSION.md  SKILLS.md
docs/devguide/llm/: LLAMA_CPP_OPENAI_ENDPOINT.md  LLM_PROXY_TESTING_ANALYSIS.md
docs/devguide/vscode/: TESTING.md
docs/eval/: CONCISE_PLAN.md  CURRENT_STATE_REFERENCE.md  README.md
docs/plans/initial/: PLAN.md  STATUS.md  TODO.md
docs/plans/v0.10/: PLAN.md  STATUS.md  TODO.md
docs/plans/v0.11/: PLAN.md  STATUS.md  TODO.md
docs/plans/v0.12/: PLAN.md  STATUS.md  TODO.md
docs/plans/v0.13/: FOCUSED_VALIDATION.md  PLAN.md  TODO.md
docs/plans/v0.14/: FOCUSED_VALIDATION.md  FOCUSED_VALIDATION_JOURNEY.md  PLAN.md  TODO.md
docs/plans/v0.15/: FOCUSED_VALIDATION.md  FOCUSED_VALIDATION_JOURNEY.md  IMPLEMENTATION_NOTE_2026-05-30_REPLAY_CAP.md  PLAN.md  TODO.md
docs/plans/v0.16/: LOCAL_QWEN_VALIDATION.md  PLAN.md  TODO.md
docs/plans/v0.17/: FOCUSED_VALIDATION.md  FOCUSED_VALIDATION_DIAGRAMS.md  FOCUSED_VALIDATION_JOURNEY.md
docs/plans/v0.2/: PLAN.md  STATUS.md  TODO.md
docs/plans/v0.3/: PLAN.md  STATUS.md  TODO.md
docs/plans/v0.4/: PLAN.md  STATUS.md  TODO.md
docs/plans/v0.5/: PLAN.md  STATUS.md  TODO.md
docs/plans/v0.6/: CONFIG_PRECEDENCE_IMPORT_FIX.md  PLAN.md  STATUS.md  TODO.md  VSCODE_SMOKE_HANDOFF.md
docs/product/: INTRO.md  ROADMAP.md
docs/release/: CHECKLIST.md
extensions/vscode/: .vscodeignore  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
scripts/: run_v016_local_qwen_focused.sh
src/codegopher/: __init__.py  __main__.py  runtime.py
tests/fixtures/: __init__.py  helpers.py
tests/integration/: test_chained_vulns_integration.py  test_chained_vulns_safety.py  test_config_management_contract.py  test_dev_benchmark_runner.py  test_events_cli.py  test_events_protocol_contract.py  test_headless_cli.py  test_init_skill_context.py  test_real_llm_endpoint.py  test_responses_provider_context.py  test_tui_context_resume.py  test_tui_memory_resume.py  test_tui_skills_context.py  test_tui_todo_resume.py
tests/unit/: __init__.py  test_agent_loop.py  test_agent_session.py  test_approval.py  test_benchmark_coverage.py  test_benchmark_evaluator.py  test_benchmark_harness.py  test_benchmark_manifest.py  test_benchmark_prepass.py  test_benchmark_proxy.py  test_benchmark_reporter.py  test_chain_linker.py  test_cli.py  test_compaction.py  test_config_inspection.py  test_config_loader.py  test_config_management.py  test_config_schema.py  test_context_budget.py  test_context_builder.py  test_conversation.py  test_core_types.py  test_edit_file.py  test_episode_state.py  test_events_protocol.py  test_events_session.py  test_fixture_helpers.py  test_glob_search.py  test_grep_search.py  test_ignore.py  test_imports.py  test_json_utils.py  test_list_dir.py  test_mcp_client.py  test_memory_store.py  test_mermaid_generator.py  test_mission_contracts.py  test_mock_provider.py  test_openai_compat_provider.py  test_openai_responses_provider.py  (+32 more)
(+1293 files in other folders)
