[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codegopher"
version = "0.1.0"
description = "A Python-native, provider-agnostic AI coding agent for your terminal"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["ai", "agent", "coding", "cli", "llm", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Terminals",
]

dependencies = [
    # OpenAI-compatible provider
    "openai>=2.37.0",
    # Model Context Protocol client support
    "mcp>=1.27.1",
    # CLI
    "click>=8.1",
    # Config validation
    "pydantic>=2.7",
    # TOML editing for project settings
    "tomlkit>=0.13",
    # HTTP
    "httpx>=0.27",
    # Console output
    "rich>=13.7",
    # Interactive terminal UI
    "textual>=8.2",
    # Token estimation
    "tiktoken>=0.7",
]

[project.optional-dependencies]
sandbox = ["docker>=7.0"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
    "hatch>=1.12",
]

[project.scripts]
codegopher = "codegopher.cli.main:app"
cgopher    = "codegopher.cli.main:app"

[project.urls]
Homepage      = "https://github.com/shamitv/codegopher"
Documentation = "https://codegopher.readthedocs.io"
Repository    = "https://github.com/shamitv/codegopher"
Issues        = "https://github.com/shamitv/codegopher/issues"

# ---------------------------------------------------------------------------
# Hatch
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/codegopher"]

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
test   = "pytest {args:tests/}"
lint   = "ruff check src/ tests/"
fmt    = "ruff format src/ tests/"
typecheck = "mypy src/"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PIE", "SIM", "TCH"]
ignore = ["E501", "TC001", "TC003", "UP042"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths   = ["tests"]
norecursedirs = ["tests/fixtures/projects"]
